--- a/Portfolio-2/src/index.css
+++ b/Portfolio-2/src/index.css
@@ -17,5 +17,12 @@
 }
 
 @layer components{
+     .menu-item{
+       @apply text-xs md:text-sm font-normal text-white relative cursor-pointer after:content-[''] after:w-full after:h-[3px] after:bg-primary after:absolute after:left-0 after:-bottom-2 after:rounded after:-translate-x-11 after:opacity-0 after:transition-all after:hover:translate-x-0 after:hover:opacity-100;
+     }
 
+     .ui-circle {
+        @apply w-[130px] h-[130px] md:h-[180px] origin-top-left rotate-[-36.39deg] rounded-[117px] border-b-2 border-sky-500;
+      }
+      
 }
