--- a/Portfolio-2/src/index.css
+++ b/Portfolio-2/src/index.css
@@ -21,6 +21,13 @@
        @apply text-xs md:text-sm font-normal text-white relative cursor-pointer after:content-[''] after:w-full after:h-[3px] after:bg-primary after:absolute after:left-0 after:-bottom-2 after:rounded after:-translate-x-11 after:opacity-0 after:transition-all after:hover:translate-x-0 after:hover:opacity-100;
      }
 
+     .primary-btn {
+      @apply h-9 md:h-11 bg-primary text-white text-sm px-6 rounded border border-primary hover:bg-transparent hover:text-primary
+     }
+
+     .pic1{
+      @apply w-[120px] h-[120px] md:w-[139px] md:h-[139px]  bg-gray-800 rounded-full
+     }
      .ui-circle {
         @apply w-[130px] h-[130px] md:h-[180px] origin-top-left rotate-[-36.39deg] rounded-[117px] border-b-2 border-sky-500;
       }
