--- a/Portfolio-2/src/index.css
+++ b/Portfolio-2/src/index.css
@@ -31,5 +31,9 @@
      .ui-circle {
         @apply w-[130px] h-[130px] md:h-[180px] origin-top-left rotate-[-36.39deg] rounded-[117px] border-b-2 border-sky-500;
       }
+
+      .input-box {
+        @apply bg-gradient-to-br from-blue-950 to-slate-900 rounded border border-blue-800/40 px-4 py-3 placeholder:text-slate-400 placeholder:text-sm mb-5 focus:outline-none focus:border-cyan-500 focus:border-2
+      }
       
 }
